Fix mobile spacings

--- a/client/components/domains/featured-domain-suggestions/style.scss
+++ b/client/components/domains/featured-domain-suggestions/style.scss
@@ -5,6 +5,10 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
+	border-top: 1px solid rgba(220, 220, 222, 0.64);
+	@include break-mobile {
+		border-top: none;
+	}
 
 	&.featured-domain-suggestions--has-match-reasons .featured-domain-suggestion {
 		.domain-registration-suggestion__match-reasons {
@@ -129,6 +133,11 @@
 		&.is-free-domain {
 			padding-left: 0;
 			margin-top: 12px;
+			display: flex;
+			flex-direction: column-reverse;
+			@include break-mobile {
+				flex-direction: column;
+			}
 		}
 	}
 
